# stm32-template

./: Cargo.toml  Embed.toml.liquid  README.md  build.rs  build.rs.liquid  cargo-generate.toml  memory.x.liquid  pre-script.rhai
.cargo/: config.liquid  config.toml.liquid
src/: main.rs.liquid
