[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
{% if defmt_enabled %}panic-probe = { version = "0.3.1", features = ["defmt"] }{% else %}panic-halt = "0.2.0"{% endif %}
{% if rtic %}cortex-m-rtic = "1.1"{% endif %}

{{ hal_dependency }}

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
